@@ -3,11 +3,8 @@ package com.google.android.accessibility.braille.brltty.device;
 import android.util.Pair;
 import com.google.android.accessibility.braille.brltty.KeyNameMapBuilder;
 import com.google.android.accessibility.braille.brltty.R;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.HashSet;
-import java.util.Set;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -16,8 +13,8 @@ import java.util.regex.Pattern;
 /** Supported device info for HID devices. */
 public class SupportedDeviceHid extends SupportedDevice {
   private static final String HID_STUB_DEVICE_NAME = "HID";
-  private static final List<Pattern> NAME_REGEXES =
-      List.of(Pattern.compile(HID_STUB_DEVICE_NAME));
+  private static final ImmutableList<Pattern> NAME_REGEXES =
+      ImmutableList.of(Pattern.compile(HID_STUB_DEVICE_NAME));
 
   @Override
   public String driverCode() {
@@ -50,7 +47,7 @@ public class SupportedDeviceHid extends SupportedDevice {
 
   @Override
   public Set<Pair<Integer, Integer>> vendorProdIds() {
-    return Set.of();
+    return ImmutableSet.of();
   }
 
   @Override
